--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.3)
 project(alectryon)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11")
 
-find_package( OpenCV REQUIRED )
+find_package(OpenCV REQUIRED)
 
 set(SOURCE_FILES main.c)
 add_executable(alectryon ${SOURCE_FILES})
